cloud/test/helm/expected/sample-prd-infrastructure.yaml
---
# Source: liferay-gcp-infrastructure/templates/elasticsearch.yaml
apiVersion: v1
kind: Namespace
metadata:
    labels:
        name: liferay-sample-prd-elasticsearch
        pod-security.kubernetes.io/enforce: restricted
    name: liferay-sample-prd-elasticsearch
---
# Source: liferay-gcp-infrastructure/templates/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
    annotations:
        argocd.argoproj.io/sync-wave: "-30"
    labels:
        app: liferay
        component: gateway
        environmentId: prd
        projectId: sample
    name: sample-prd-gateway
    namespace: liferay-sample-prd
spec:
    gatewayClassName: liferay-gateway-class
    listeners:
        -   allowedRoutes:
                namespaces:
                    from: Same
            name: http
            port: 80
            protocol: HTTP
